Rewrote everything to gin, added swagger support
